<resources>
    <string name="app_name">Transolyfer GO</string>
    <string name="s_accept">Aceptar</string>
    <string name="s_cancel">Cancelar</string>
    <string name="s_permissions">Para acceder a este servicios debes aceptar los permisos de acceso de datos</string>
    <string name="s_code">Código:</string>
    <string name="s_event">Evento:</string>
    <string name="s_enterprise">Empresa:</string>
    <string name="s_observation">Observación:</string>
    <string name="s_register">Registrar</string>
    <string name="s_scan">Escanear Pedido</string>
    <string name="s_spinner_default">&#60;--Seleccione--&#62;</string>
    <string name="s_not_pendings">No hay pedido(s) pendiente(s) por enviar</string>
    <string name="s_sync">Sincronizar</string>
    <string name="s_not_conecction">No hay conexión a internet.\nIntente nuevamente</string>
    <string name="s_send">Los datos fueron enviados correctamente</string>

    <!-- Location -->
    <string name="location_message_text">La ubicación es necesaria. \n ¿Desea activar el GPS?</string>
    <string name="location_option_positive">ACTIVAR</string>
    <string name="location_option_negative">NO</string>
    <string name="todo">TODO</string>
    <string name="storageConnectionString">DefaultEndpointsProtocol=https;AccountName=transolyferstorage;AccountKey=xW4XtC+PW5yIzf7BBaEBdAxo8HsmayMY4aBxBI8C1EivZ+XAfe5DisZ8b0xP/Fdws/D8j7q6Kkeu6VbHjJayvQ==</string>
    <string name="pathImageToConcatenate">https://transolyferstorage.blob.core.windows.net/</string>

    <string name="s_detail_name">Nombre CN:</string>
    <string name="s_detail_phono">Teléfono:</string>
    <string name="s_detail_number">Número de pieza:</string>
    <string name="s_detail_addres">Dirección:</string>
    <string name="s_detail_show_ubication">VER ULTIMA UBICACIÓN</string>
    <string name="title_activity_map">MapActivity</string>

    <string name="s_intranet_user">Usuario:</string>
    <string name="s_intranet_password">Contraseña:</string>
    <string name="s_intranet_remember">Recordar contraseña?</string>
    <string name="s_intranet_login">Ingresar</string>

    <string name="s_report_code">NroPedido:</string>
    <string name="s_row_report_photo"><u>Descargar foto cargo</u></string>
    <string name="s_row_report_photo_1"><u>Descargar foto referencial</u></string>
    <string name="message_no_element">No existen elementos</string>

    <string name="s_register_offline">Activar modo offline?</string>
    <string name="splash_title_version">V.</string>
    <string name="title_activity_zxing">ZxingActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="scan_barcode">Scan Barcode</string>
    <string name="scan_barcode_with_request_code">Scan Barcode with customized request code</string>
    <string name="any_orientation">1D Any Orientation</string>
    <string name="scan_from_fragment">Scan from fragment</string>
    <string name="front_camera">Front Camera</string>
    <string name="custom_activity">Continuous Scan</string>
    <string name="toolbar_activity">Activity with Toolbar</string>
    <string name="custom_scanner">Custom Scanner Activity</string>
    <string name="scanner_with_margin">Scanner with Margin</string>
    <string name="scanner_with_timeout">Finish Scan in 8 Seconds</string>
    <string name="turn_on_flashlight">Turn on Flashlight</string>
    <string name="turn_off_flashlight">Turn off Flashlight</string>
    <string name="title_activity_tabbed_scanning">Tabbed Scanning</string>
    <string name="tabs">Tabs</string>
    <string name="about">About</string>

</resources>
